--- a/static/index.css
+++ b/static/index.css
@@ -60,3 +60,21 @@ p {
 #link {
   visibility: hidden;
 }
+
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.line{
+  width: 10px;
+  color: white;
+  width: 75%;
+}
