--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
         <!-- <div className="pre_img">
           <span><img id="imagebox" src="" /></span>
         </div> -->
-        <div id="link">
-          <a href="" id="download" download>Download</a>
-        </div>
         <!-- <video width="320" height="240" controls>
           <source src="/static/video_1.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video> -->
+        <button name="cam" class="button" id="opencam">Video Cam</button>
+        <br/>
+        <hr class="line" />
         <form>
           <input
             id="imageinput"
@@ -32,7 +32,11 @@
             onchange="readUrl(this)"
           />
         </form>
-        <button name="send" id="sendbutton">Send</button>
+        <button name="send"  class="button" id="sendbutton">Send</button>
+        <br/>
+        <div id="link">
+          <a href="" id="download" download>Download</a>
+        </div>
       </header>
     </div>
   </body>
